java-containers-k8s/kubernetes/manifests/base/notification.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notification-service
  labels:
    service: notification
spec:
  replicas: 1
  selector:
    matchLabels:
      service: notification
  template:
    metadata:
      labels:
        service: notification
    spec:
      containers:
        - name: notification-service
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 80
            initialDelaySeconds: 10
