java-containers-k8s/kubernetes/manifests/base/inventory.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: inventory-service
  labels:
    service: inventory
spec:
  replicas: 1
  selector:
    matchLabels:
      service: inventory
  template:
    metadata:
      labels:
        service: inventory
    spec:
      containers:
        - name: inventory-service
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 80
            initialDelaySeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: inventory-service
  labels:
    service: inventory
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 8080
      targetPort: 80
      protocol: TCP
  selector:
    service: inventory
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: inventory-service
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
    - http:
        paths:
          - path: /api/inventory
            pathType: Prefix
            backend:
              service:
                name: inventory-service
                port:
                  number: 8080
