java-containers-k8s/kubernetes/manifests/base/order.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-service
  labels:
    service: order
spec:
  replicas: 1
  selector:
    matchLabels:
      service: order
  template:
    metadata:
      labels:
        service: order
    spec:
      containers:
        - name: order-service
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
          readinessProbe:
            httpGet:
              path: /health
              port: 80
            initialDelaySeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: order-service
  labels:
    service: order
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 8081
      targetPort: 80
      protocol: TCP
  selector:
    service: order
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: order-service
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
    - http:
        paths:
          - path: /api/order
            pathType: Prefix
            backend:
              service:
                name: order-service
                port:
                  number: 8081
